<resources>
    <string name="app_name">Transactions</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="name">NAME</string>
    <string name="amount">AMOUNT</string>
    <string name="date">DATE</string>
    <string name="description">DESCRIPTION</string>
    <string name="tags">TAGS</string>
    <string name="revenue">Revenue</string>
    <string name="expenses">Expenses</string>
    <string name="all">All</string>
    <string name="filters">Filters</string>
    <string name="transaction_history">Transaction history     </string>
    <string name="accounts">Accounts</string>
    <string name="empty_title">Oh crap, you\'ve\ngot nothing.</string>
    <string name="empty_content">Use add button to add transactions</string>
    <string name="pick_date">Pick Date</string>
</resources>